force-app/main/default/objects/Apttus_Config2__ProductConstraint__c/Apttus_Config2__ProductConstraint__c.object-meta.xml
<CustomObject>
    <description>Represents a set of constraints a product must satisfy before it can be added to the product configuration.</description>
    <label>Product Constraint</label>
    <nameField>
        <label>Constraint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Constraints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>