force-app/main/default/objects/Apttus_Config2__ProductConstraint__c/fields/Apttus_Config2__ContextType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContextType__c</fullName>
    <description>The type of context associated with the constraint</description>
    <label>Context Type (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
                <default>true</default>
                <label>Product</label>
            </value>
            <value>
                <fullName>Product Family</fullName>
            </value>
            <value>
                <fullName>Product Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>