force-app/main/default/objects/Apttus_Config2__ProductConstraint__c/fields/Apttus_Config2__Message__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Message__c</fullName>
    <description>The message to display to the user when the constraint is violated</description>
    <label>Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>