force-app/main/default/objects/Apttus_Config2__ProductConstraint__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Apttus_Config2__Active__c</columns>
    <columns>Apttus_Config2__Description__c</columns>
    <columns>Apttus_Config2__Message__c</columns>
    <columns>Apttus_Config2__ProductId__c</columns>
    <columns>Apttus_Config2__ProductCategory__c</columns>
    <columns>Apttus_Config2__ProductFamily__c</columns>
    <columns>Apttus_Config2__ProductGroupId__c</columns>
    <columns>Apttus_Config2__Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>